--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -173,25 +173,27 @@
 
 <body>
     <img id="binary" src="passbackground.png">
-    <p class="header" id="whatIs"><b>What is pass.jpg?</b></p>
-    <p class="description" id="whatIsDesc">Pass.jpg is a innovative solution to secure password storage. It uses images not<br>only to create an extra layer of security to you passwords, but also to make it easy<br>to keep track of and manage them.</p>
+    <p class="header" id="whatIs">What is <strong>pass.jpg</strong>?</p>
+    <p class="description" id="whatIsDesc">Pass.jpg is an innovative solution to secure password storage. It uses images not only to create an <br>extra layer of security to your passwords, but also to make it easy to keep track of and manage them.</p>
     <p class="header" id="howDoes">How does it work?</p>
-    <p class="description" id="howDoesDesc">Pass.jpg encrypts a secure 16 character into an image of your choosing by using RSA encryption. We take a secure password, and combine our encryption image with your image to create a key. We then encrypt that secure password even further and embed
+    <p class="description" id="howDoesDesc">Pass.jpg encrypts a secure 16-character string into an image of your choosing by RSA encryption. We take a secure password, and combine our encryption image with your image to creat
+        e a key. We then encrypt that secure password even further, embedding
         that into your image using stegonography.</p>
     <p class="header" id="whyImages">Why images?</p>
     <p class="description" id="whyImagesDesc">We found that images are easier to remember than text. This means that we can lock<br>out a person after only 2 failed attempts. The images also mean that even if someone<br>logs into your account, they still have to correctly guess your image rather than
         getting access to all your passwords.</p>
     <!-- <div class="title"><p><b>pass.jpg</b></p></div> -->
-    <div class="title"></div>
+	<div class="title"></div>
     <i class="fas fa-chevron-down"></i>
     <div class="bottomBar">
-        <button>Secure me!</button>
+        <button id="buttnum">Secure me!</button>
         <div class="phoneNum">
-            <input type="text" placeholder="Phone Number" class="textField">
+            <input type="text" placeholder="Phone Number" class="textField" id="textField">
             <i class="fas fa-sms" id="sms"></i>
         </div>
-    </div>
-    <img id="banner" src="banner.png">
+	</div>
+	<img id="banner" src="banner.png">
+	<script src="options.js"></script>
 </body>
 
 </HTML>
