--- a/chrome-plugin/popup.html
+++ b/chrome-plugin/popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <style>
             img {
                 height: 100px;
@@ -47,6 +48,12 @@
                 font-family: 'Lato', sans-serif;
                 font-size: 2em;
             }
+            p{
+                float:left
+            }
+            i{
+                float:right;
+            }
         </style>
     </head>
     <body>
@@ -84,7 +91,8 @@
         </table>
         <div id="imgDiv"></div>
         <div>
-            <p>Select your corresponding image password</p>
+            <p>Select your corresponding image password </p>
+            <i class="fas fa-cog" id="cog"></i>
         </div>
         <script src="popup.js"></script>
     </body>
