--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -162,6 +162,10 @@
             margin-left: auto;
             margin-right: auto;
         }
+
+		p{
+			padding:20px;
+		}
         
         html,
         body {
@@ -174,7 +178,7 @@
 <body>
     <img id="binary" src="passbackground.png">
     <p class="header" id="whatIs">What is <strong>pass.jpg</strong>?</p>
-    <p class="description" id="whatIsDesc">Pass.jpg is an innovative solution to secure password storage. It uses images not only to create an <br>extra layer of security to your passwords, but also to make it easy to keep track of and manage them.</p>
+    <p class="description" id="whatIsDesc">Pass.jpg is an innovative solution to secure password storage. It uses images not only to create an extra layer of security to your passwords, but also to make it easy to keep track of and manage them.</p>
     <p class="header" id="howDoes">How does it work?</p>
     <p class="description" id="howDoesDesc">Pass.jpg encrypts a secure 16-character string into an image of your choosing by RSA encryption. We take a secure password, and combine our encryption image with your image to creat
         e a key. We then encrypt that secure password even further, embedding
@@ -186,7 +190,7 @@
 	<div class="title"></div>
     <i class="fas fa-chevron-down"></i>
     <div class="bottomBar">
-        <button id="buttnum">Secure me!</button>
+        <button id="buttnum" onclick="window.location.href='page2.html'">Secure me!</button>
         <div class="phoneNum">
             <input type="text" placeholder="Phone Number" class="textField" id="textField">
             <i class="fas fa-sms" id="sms"></i>
