--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -180,8 +180,7 @@
     <p class="header" id="whatIs">What is <strong>pass.jpg</strong>?</p>
     <p class="description" id="whatIsDesc">Pass.jpg is an innovative solution to secure password storage. It uses images not only to create an extra layer of security to your passwords, but also to make it easy to keep track of and manage them.</p>
     <p class="header" id="howDoes">How does it work?</p>
-    <p class="description" id="howDoesDesc">Pass.jpg encrypts a secure 16-character string into an image of your choosing by RSA encryption. We take a secure password, and combine our encryption image with your image to creat
-        e a key. We then encrypt that secure password even further, embedding
+    <p class="description" id="howDoesDesc">Pass.jpg encrypts a secure 16-character string into an image of your choosing by RSA encryption. We take a secure password, and combine our encryption image with your image to create a key. We then encrypt that secure password even further, embedding
         that into your image using stegonography.</p>
     <p class="header" id="whyImages">Why images?</p>
     <p class="description" id="whyImagesDesc">We found that images are easier to remember than text. This means that we can lock<br>out a person after only 2 failed attempts. The images also mean that even if someone<br>logs into your account, they still have to correctly guess your image rather than
