--- a/chrome-plugin/page2.html
+++ b/chrome-plugin/page2.html
@@ -53,8 +53,9 @@
             position:absolute;
             margin-top:1em;
             font-size:4em;
-            margin-left:8em;
+            margin-left:7.8em;
             color:white;
+            font-family:'Lato', sans-serif;
         }
 
         .blueBox{
