--- a/chrome-plugin/unlockedPage.html
+++ b/chrome-plugin/unlockedPage.html
@@ -32,6 +32,6 @@
     <body>
         <img id="background" src="passbackground.png">
         <p>You are now unlocked!</p>
-
+        <script src="unlock.js"></script>
     </body>
 </HTML>
