--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -20,10 +20,11 @@
             position: absolute;
             font-size: 5em;
             color: white;
-            height: 9.5em;
+            height: 100vh;
             width: 100%;
             text-align: center;
             box-shadow:0px 2px 10px gray;
+
         }
         
         .title p {
@@ -103,7 +104,7 @@
         .bottomBar {
             position: absolute;
             display: block;
-            margin-top: 100em;
+            margin-top: 200vh;
             height: 10em;
             background-color: #5c98f9;
             width: 100%;
@@ -185,7 +186,6 @@
     <p class="header" id="whyImages">Why images?</p>
     <p class="description" id="whyImagesDesc">We found that images are easier to remember than text. This means that we can lock<br>out a person after only 2 failed attempts. The images also mean that even if someone<br>logs into your account, they still have to correctly guess your image rather than
         getting access to all your passwords.</p>
-    <!-- <div class="title"><p><b>pass.jpg</b></p></div> -->
 	<div class="title"></div>
     <i class="fas fa-chevron-down"></i>
     <div class="bottomBar">
