--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -114,14 +114,14 @@
         .header {
             position: fixed;
             color: #2061c9;
-            font-size: 3em;
+            font-size: 6.5vh;
             margin-left: 1em;
         }
         
         .description {
             position: fixed;
             color: black;
-            font-size: 2em;
+            font-size: 4.5vh;
             margin-left: 4em;
         }
         
