--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -39,7 +39,8 @@
             width: 8.7em;
             font-size: 2em;
             margin-top: 1em;
-            margin-left: 28em;
+            margin-right:21%;
+			margin-left:auto;
             outline: none;
             border-radius: 10em;
             border: none;
@@ -67,7 +68,7 @@
             display: block;
             width: 8.7em;
             margin-top: -3.3em;
-            margin-left: 6em;
+            margin-left: 20%;
             border-radius: 30em;
             border: none;
             outline: none;
@@ -82,7 +83,7 @@
             color: #aaa;
             position: absolute;
             margin-top: -1.8em;
-            margin-left: 5.3em;
+            margin-left: 22%;
             font-size:2.5em;
         }
 
@@ -121,7 +122,7 @@
         .description {
             position: fixed;
             color: black;
-            font-size: 4.5vh;
+            font-size: 4.2vh;
             margin-left: 4em;
         }
         
