--- a/chrome-plugin/page2.html
+++ b/chrome-plugin/page2.html
@@ -52,8 +52,9 @@
         #dontLose{
             position:absolute;
             margin-top:1em;
-            font-size:4em;
-            margin-left:7.8em;
+            font-size:7em;
+            margin-left:auto;
+            margin-right:auto;
             color:white;
             font-family:'Lato', sans-serif;
         }
