--- a/chrome-plugin/page2.html
+++ b/chrome-plugin/page2.html
@@ -20,17 +20,18 @@
 
         .downloads{
             position:absolute;
-            width:20em;
-            height:20em;
+            width:30em;
+            height:30em;
             margin-top:12em;
         }
 
         #pass{
-            margin-left:50em;
+            margin-left:30%;
         }
 
         #key{
-            margin-left:20em;
+            margin-left:auto;
+            margin-right:30%;
         }
 
         .desc{
@@ -53,8 +54,7 @@
             position:absolute;
             margin-top:1em;
             font-size:7em;
-            margin-left:auto;
-            margin-right:auto;
+            margin-left:40%;
             color:white;
             font-family:'Lato', sans-serif;
         }
