--- a/chrome-plugin/page2.html
+++ b/chrome-plugin/page2.html
@@ -20,18 +20,17 @@
 
         .downloads{
             position:absolute;
-            width:30em;
-            height:30em;
+            width:20em;
+            height:20em;
             margin-top:12em;
         }
 
         #pass{
-            margin-left:30%;
+            margin-left:50em;
         }
 
         #key{
-            margin-left:auto;
-            margin-right:30%;
+            margin-left:20em;
         }
 
         .desc{
@@ -53,8 +52,8 @@
         #dontLose{
             position:absolute;
             margin-top:1em;
-            font-size:7em;
-            margin-left:40%;
+            font-size:4em;
+            margin-left:8em;
             color:white;
             font-family:'Lato', sans-serif;
         }
