--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -50,7 +50,7 @@
         
         button:hover {
             width: 10em;
-            margin-left: 27.35em;
+            margin-left: 80.5%%;
             background-color: #ededed;
             cursor: pointer;
         }
