--- a/chrome-plugin/page2.html
+++ b/chrome-plugin/page2.html
@@ -75,8 +75,8 @@
     <a href="imagekey.jpg" download>
         <img src="imagekey.jpg" class="downloads" id="key">
     </a>
-    <a href="passimage2.jpg" download>
-        <img src="passimage2.jpg" class="downloads" id="pass">
+    <a href="./images/passimage2.jpg" download>
+        <img src="./images/passimage2.jpg" class="downloads" id="pass">
     </a>
     <p id="dontLose">Dont lose these!</p>
     <p class="desc" id="keyDesc">Your key</p>
