--- a/chrome-plugin/options.html
+++ b/chrome-plugin/options.html
@@ -50,7 +50,7 @@
         
         button:hover {
             width: 10em;
-            margin-left: 80.5%%;
+            margin-left: 80.5;
             background-color: #ededed;
             cursor: pointer;
         }
@@ -83,7 +83,7 @@
             color: #aaa;
             position: absolute;
             margin-top: -1.8em;
-            margin-left: 20.2%;
+            margin-left: 21.15%;
             font-size:2.5em;
         }
 
